Version 1.11.10+dev:
 * Language and i18n:
   * Updated translations:
 * WML engine:
   * Bug #21643: Removing fog from a single hex no longer makes the hex ugly.

Version 1.11.10:
 * Add-ons client:
   * Fixed faulty add-on _info.cfg files causing the game to display obscure
     error messages or crash to desktop.
   * Generated _info.cfg files now contain the list of dependencies for an
     add-on as well (needed by wesnoth_addon_manager).
   * Python wesnoth_addon_manager client:
     * The dependencies= attribute and the [feedback] tag in .pbl files are
       now properly supported (bug #21189).
     * Generated _info.cfg files now contain the same information as the
       game's built-in client (type and title were missing).
 * AI:
   * Hang Out Micro AI: default AI [avoid] aspect is now taken into account
   * Fixed problems with several Micro AIs that sometimes produced OOS errors
 * Campaigns:
   * Eastern Invasion:
     * New world map.
     * Rewrote scenario 'Training the Ogres' and renamed it to
       'Capturing the Ogres'.
     * Rewrote scenario 'Captured'.
   * Heir to the Throne:
     * Fixed Delfador clobbering whichever unit happens to be standing on
       31,11 at the end of The Bay of Pearls, causing it to disappear
       forever.
     * S15 (The Lost General): fix bug of sighted events firing too early
   * Legend of Wesmere:
     * Fixed missing journey map background in story screens.
   * Liberty:
     * Updated sprites for Shadow Mage line.
   * Son of the Black Eye:
     * Rebalancing of the campaign is now complete
   * Under the Burning Suns:
     * Updated animation WML of all campaign specific units
 * Editor:
  * Fixed: Drawing the offmap area for small resolutions.
 * GUI2:
   * Added: FAI-function handling in GUI2 widgets.
   * Added: A new tooltip window.
 * Language and i18n:
   * Updated translations: Scottish Gaelic
 * Lua API:
   * Config of current era is now available in a Lua table in MP games