@@ -5,6 +5,8 @@ changelog: https://github.com/wesnoth/wesnoth-old/blob/master/changelog
 Version 1.11.10+dev:
  * Language and i18n:
    * Updated translations: 
+ * Miscellaneous and bug fixes:
+   * Units can no longer be moved in linger mode (bug #21450).
 
 
 Version 1.11.10:
