@@ -73,9 +73,9 @@ public:
 		const bool highlight = true,
 		const bool fire_event = true);
 
-	void move_action();
+	void move_action(bool browse);
 
-	void select_or_action();
+	void select_or_action(bool browse);
 
 	void left_mouse_up(int x, int y, const bool /*browse*/);
 	void mouse_wheel_up(int x, int y, const bool /*browse*/);
