@@ -3,6 +3,8 @@ Version 1.11.10+dev:
    * Updated translations:
  * WML engine:
    * Bug #21643: Removing fog from a single hex no longer makes the hex ugly.
+ * Miscellaneous and bug fixes:
+   * Units can no longer be moved in linger mode (bug #21450).
 
 Version 1.11.10:
  * Add-ons client:
